<resources>
    <string name="app_name">NavDrawer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sober_clock">Sober Clock</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="todo_list">Todo List</string>
    <string name="goals">Goals</string>
    <string name="diary">Diary</string>
    <string name="about">About</string>
    <string name="menu">Menu</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sam_s_voice_password">Sam\'s Voice password</string>
    <string name="register">Register</string>
    <string name="cancel">cancel</string>
    <string name="lets_store_our_memories">Lets Store our memories</string>
    <string name="title_of_goal">Title Of Goal</string>
    <string name="start_date">Start date</string>
    <string name="end_time">end time</string>
    <string name="end_date">end date</string>
    <string name="start_time">start time</string>
    <string name="save">Save</string>
    <string name="lets_write_our_journey">Lets write our Journey</string>
    <string name="text">text</string>
    <string name="savebutton">Save</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="desc">desc</string>
    <string name="startdategoal">startDateGoal</string>
    <string name="road_to_recovery">Road To Recovery</string>
    <string name="by_alchemists_inc">by : Alchemists inc</string>
    <string name="for_sam_s_voice">For : Sam\'s voice</string>
    <string name="btnhistory">History</string>
    <string name="btnaddgoal">AddGoal</string>
    <string name="reason">Reason</string>
    <string name="this_gives_you_the_ability_to_search_through_all_the_diary_enteries_that_you_have_created">This gives you the ability to search through all the Diary Enteries that you have created</string>
    <string name="date1">Date</string>
    <string name="description1">Description</string>
</resources>