<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"
    tools:context="com.samsvoice.roadtorecovery.GoalEntry">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:padding="20dp"
            app:strokeColor="@color/DDV1"
            app:cornerRadius="10dp"
            app:strokeWidth="30dp">

            <EditText
                android:id="@+id/goalUploadTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:hint="@string/title_of_goal"
                android:padding="16dp"
                android:textColor="@color/DDV5"
                android:background="@drawable/lavender_border"
                android:backgroundTint="@color/LLP3"

                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/startDateButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_date"
                    tools:ignore="ButtonStyle,VisualLintButtonSize"/>

                <Button
                    android:id="@+id/startTimeButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_time"
                    tools:ignore="ButtonStyle,VisualLintButtonSize"/>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/endDateButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_date"
                    tools:ignore="ButtonStyle,VisualLintButtonSize"/>

                <Button
                    android:id="@+id/endTimeButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_time"
                    tools:ignore="ButtonStyle,VisualLintButtonSize"/>

            </LinearLayout>


            <EditText
                android:id="@+id/GoalUploadList"
                android:layout_width="match_parent"
                android:layout_height="223dp"
                android:layout_marginTop="10sp"
                android:background="@drawable/lavender_border"
                android:backgroundTint="@color/LLP3"
                android:gravity="top"
                android:hint="@string/lets_write_our_journey"
                android:padding="16dp"
                android:singleLine="false"
                android:textColor="@color/DDV5"
                android:textSize="15sp"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize"
                 />


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/save"
                android:id="@+id/saveButtonGoal"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                app:cornerRadius = "20dp"

                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
        <!--  </androidx.cardview.widget.CardView>-->

</ScrollView>