<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"
    tools:context="com.samsvoice.roadtorecovery.GoalEntryDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:id="@+id/detailTitlGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:background="@drawable/lavender_border"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="12dp"
        android:textSize="30sp"
        android:textColor="@color/V4"

        />



        <TextView
            android:id="@+id/detailStartDateGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textSize="20sp"
            android:textColor="@color/V4"


            android:background="@drawable/lavender_border"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="12dp"
            />

        <TextView
            android:id="@+id/detailStartTimeGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="20sp"
            android:textColor="@color/V4"

            android:background="@drawable/lavender_border"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="12dp"
            />




        <TextView
            android:id="@+id/detailenddateGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="20sp"
            android:textColor="@color/V4"

            android:background="@drawable/lavender_border"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="12dp"
            />

        <TextView
            android:id="@+id/detailendTimeGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="20sp"
            android:textColor="@color/V4"

            android:background="@drawable/lavender_border"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="12dp"
            />

    <TextView
        android:id="@+id/detailGoal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fadeScrollbars="true"
        android:padding="20dp"
        android:text="@string/description"
        android:scrollbars="vertical"
        android:textColor="@color/DDV5"
        android:textSize="18sp"

        android:background="@drawable/lavender_border"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="12dp"

        />
    </LinearLayout>


</ScrollView>
