<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register1"
    tools:context="com.samsvoice.roadtorecovery.Register">

    <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-light"
    android:text="@string/register"
    android:textColor="@color/VP1"

    android:textSize="35sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.274"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/P5"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/DDV5"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.069"
        tools:ignore="VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/P5"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/DDV5"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintVertical_bias="0.075"
        tools:ignore="VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/P5"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"

        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/DDV5"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    <EditText
        android:id="@+id/SamsVoicePasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/P5"
        android:hint="@string/sam_s_voice_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"

        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/DDV5"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        app:layout_constraintVertical_bias="0.076"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    <Button
    android:id="@+id/button3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="72dp"
    android:onClick="regUser"
    android:text="@string/register"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/SamsVoicePasswordET"
    app:layout_constraintVertical_bias="0.245"
    tools:ignore="DuplicateSpeakableTextCheck"
    app:strokeColor="@color/DDV1"
    android:backgroundTint="@color/LLP3"
    android:textColor="@color/V4"
    app:cornerRadius="10dp"
    app:strokeWidth="1dp"
    />



    <Button
    android:id="@+id/button4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/cancel"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.331"
    app:layout_constraintStart_toEndOf="@+id/button3"
    app:layout_constraintTop_toBottomOf="@+id/SamsVoicePasswordET"
    app:layout_constraintVertical_bias="0.245"

    app:strokeColor="@color/DDV1"
    android:backgroundTint="@color/LLP3"
    android:textColor="@color/V4"
    app:cornerRadius="10dp"
    app:strokeWidth="1dp"
    />


</androidx.constraintlayout.widget.ConstraintLayout>