<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recGoalCard"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E0A8D7">

        <!--  <TextView
              android:layout_width="80dp"
              android:layout_height="30dp"
              android:id="@+id/recCat"
              android:text="priority"
              android:layout_toEndOf="@id/recTitle"
              android:layout_marginTop="20dp"
              android:layout_marginStart="90dp"
              android:textAlignment="center"
              android:textColor="@color/DDV5"
              android:textSize="16sp"/>-->

        <TextView
            android:id="@+id/recTitleGoal"
            android:layout_width="2000dp"

            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/DDV5"
            android:textSize="20sp" />

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/recStartDate"
            android:text="@string/startdategoal"
            android:textColor="@color/DDV5"
            android:textSize="14sp"
            android:visibility="invisible"
            android:layout_below="@id/recTitleGoal"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/recEndDateGoal"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/recTitleGoal"
            android:layout_marginLeft="126dp"
            android:maxLines="1"
            android:layout_marginTop="30dp"
            android:text="@string/desc"
            android:visibility="invisible"
            android:textColor="@color/DDV5"
            android:textSize="14sp" />

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/recStartTime"
            android:text="@string/startdategoal"
            android:textColor="@color/DDV5"
            android:textSize="14sp"
            android:visibility="invisible"
            android:layout_below="@id/recTitleGoal"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/recEndTimeGoal"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/recTitleGoal"
            android:layout_marginLeft="126dp"
            android:maxLines="1"
            android:layout_marginTop="30dp"
            android:text="@string/desc"
            android:visibility="invisible"
            android:textColor="@color/DDV5"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/recDescGoal"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/recStartDate"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="146dp"
            android:layout_marginLeft="126dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="101dp"
            android:maxLines="1"
            android:text="@string/desc"
            android:textColor="@color/DDV5"
            android:textSize="14sp"
            android:visibility="invisible" />
    </RelativeLayout>



</androidx.cardview.widget.CardView>
