<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register2"
    tools:context=".Login">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/login"
        android:textColor="@color/VP1"

        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />


    <EditText
    android:id="@+id/editTextTextEmailAddress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="364dp"
    android:ems="10"
    android:hint="@string/email"
    android:importantForAutofill="no"
    android:inputType="textEmailAddress"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    android:textSize="20dp"

    android:backgroundTint="@color/P5"
    android:textColor="@color/black"
    android:textColorHint="@color/DDV5"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

    <EditText
    android:id="@+id/editTextTextPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/password"
    android:importantForAutofill="no"
    android:inputType="textPassword"
    android:textSize="20dp"

    android:backgroundTint="@color/P5"
    android:textColor="@color/black"
    android:textColorHint="@color/DDV5"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
    app:layout_constraintVertical_bias="0.115"
    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"/>



  <!--<Button
  android:id="@+id/button"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:backgroundTint="@color/LLP3"
  android:text="@string/login"
  android:textColor="@color/V4"
  app:cornerRadius="10dp"
  app:layout_constraintBottom_toBottomOf="parent"
      android:onClick="loginUser"
  app:layout_constraintEnd_toEndOf="parent"
  app:layout_constraintStart_toStartOf="parent"
  app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
  app:layout_constraintVertical_bias="0.206"
  app:strokeColor="@color/DDV1"
  app:strokeWidth="1dp"
      tools:ignore="OnClick" />

  <Button
  android:id="@+id/button5"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
      android:onClick="regScreen"

  android:text="@string/register"
  app:layout_constraintBottom_toBottomOf="parent"
  app:layout_constraintEnd_toEndOf="parent"
  app:layout_constraintHorizontal_bias="0.498"

  app:layout_constraintStart_toStartOf="parent"
  app:layout_constraintTop_toBottomOf="@+id/button"
  app:layout_constraintVertical_bias="0.212"

  app:strokeColor="@color/DDV1"
  android:backgroundTint="@color/LLP3"
  android:textColor="@color/V4"
  app:cornerRadius="10dp"
  app:strokeWidth="1dp"
      tools:ignore="OnClick" />
      -->



   <!-- <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="Login page"
        android:textColor="@color/VP1"
        android:textSize="35sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356"/>

  <EditText
      android:id="@+id/editTextTextEmailAddress"
      android:layout_width="wrap_content"
      android:layout_height="35dp"
      android:backgroundTint="@color/P5"
      android:ems="10"
      android:hint="Email"


      android:importantForAutofill="no"
      android:inputType="textEmailAddress"
      android:textColor="@color/black"

      android:textColorHint="@color/DDV5"


      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      app:layout_constraintVertical_bias="0.132"
      tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

  <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="password"
        android:importantForAutofill="no"
        android:inputType="textPassword"

        android:backgroundTint="@color/P5"
        android:textColor="@color/black"
        android:textColorHint="@color/DDV5"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.116"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
-->
    <!--<ImageView
    android:id="@+id/imageView3"
    android:layout_width="153dp"
    android:layout_height="150dp"
    android:layout_marginStart="126dp"
    android:layout_marginTop="23dp"
    android:layout_marginEnd="132dp"
    android:layout_marginBottom="32dp"
    app:layout_constraintBottom_toTopOf="@+id/textView2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3"
    app:srcCompat="@drawable/kaizen"/>
    -->
    <!--<Button
    android:id="@+id/button2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="cancelFields"
    android:text="@string/cancel"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.395"
    app:layout_constraintStart_toEndOf="@+id/button"
    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
    app:layout_constraintVertical_bias="0.221"/>
    -->

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/LLP3"
      android:onClick="loginUser"

      android:text="login"

      android:textColor="@color/V4"
      app:cornerRadius="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"

      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
      app:layout_constraintVertical_bias="0.371"
      app:strokeColor="@color/DDV1"
      app:strokeWidth="1dp"
      tools:ignore="OnClick" />

  <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="regScreen"
        android:text="register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.222"

        app:strokeColor="@color/DDV1"
        android:backgroundTint="@color/LLP3"
        android:textColor="@color/V4"
        app:cornerRadius="10dp"
        app:strokeWidth="1dp"

        />





</androidx.constraintlayout.widget.ConstraintLayout>